[package]
name = "xio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.7"
#grpcio-sys = "0.8"
#grpcio = { version = "0.9"}
#grpcio-sys = { path = "../grpc-sys", version = "0.9" }
# tokio = { version = "1", features = ["macros", "rt-multi-thread", "time",  "net"] }
# tokio = { version = "1", features = ["full"] }

protobuf = { version = "2.*.*", features = ["with-bytes"] }
protobuf-codegen = "2.*.*"
protoc = "2.*.*"

anyhow = "1.0"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }

structopt = "0.3.20"
log = "0.4"
pretty_env_logger ="0.4"
# slog = "2.0"
# slog-async = "2.1"
# slog-stdlog = "4.0"
# slog-scope = "4.0"
# slog-term = "2.2"


# for io
crossbeam = "0.8"
crossbeam-channel = "0.5"


serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
bincode = "1.3.1"
# async-std = "1.9"
# async-trait = "0.1"
# anyhow = "1.0"
# structopt = "0.3.20"
# libc = "0.2"

#[build-dependencies]
#protoc-grpcio = "1.0.2"


[[example]]
name = "ex01"
path = "examples/ex01.rs"

[[example]]
name = "ex02"
path = "examples/ex02.rs"

[[example]]
name = "ex03"
path = "examples/ex03.rs"

[[example]]
name = "ex04"
path = "examples/ex04.rs"

[[example]]
name = "ex05"
path = "examples/ex05.rs"
